agent-dialogue-core/deployment_config/deployment-envoy-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"esp-core-backend-config"}}'
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/network-tier: "PREMIUM"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 10000
    protocol: TCP
  selector:
    app: DEPLOYMENT_NAME
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DEPLOYMENT_NAME
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: esp-core-custom
  replicas: 1
  template:
    metadata:
      labels:
        app: DEPLOYMENT_NAME
        app.kubernetes.io/name: esp-core-custom
    spec:
      volumes:
        - name: disk-core-volume
          persistentVolumeClaim:
            claimName: PVC_NAME
      containers:
      # [START envoy]
      - name: esp
        image: IMAGE_REPO/envoy:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 10000
      # [END envoy]
      - name: core
        image: IMAGE_REPO/grpc-server:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8070
        volumeMounts:
          - mountPath: "code/keys"
            name: disk-core-volume 
      - name: grpc-health-proxy
        image: IMAGE_REPO/grpc-health-proxy:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
